--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,9 @@ body {
 p {
         display: flex;
         align-items: center;
-        margin: 30,5,30,5;
+        margin: 30px,5px,30px,5px;
         color: white;
-        font-size: 2rem;
+        font-size: 2.5rem;
         font-family: Arial, Helvetica, sans-serif;
     }
 
