--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ p {
         display: flex;
         align-items: center;
         margin: 30px,5px,30px,5px;
-        color: white;
+        color: black;
         font-size: 2.5rem;
         font-family: Arial, Helvetica, sans-serif;
     }
@@ -24,7 +24,7 @@ p {
         width: 600px;
         height: 600px;
         /*border: 2px solid cyan;*/
-        color: whitesmoke;
+        color: black;
         border-radius: 50%;
         font-family: monospace;
         font-family: "Black Ops One", system-ui;
