--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@ body {
 p {
         display: flex;
         align-items: center;
-        margin: 30px,5px,30px,5px;
-        color: black;
+        margin: 30 px, 5 px, 30 px, 5 px;
+        color: blue;
         font-size: 2.5rem;
         font-family: Arial, Helvetica, sans-serif;
     }
