--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,17 @@ body {
         display: grid;
         place-items: center;
         overflow: hidden;
+        background-color: 5a5a5a;
         background: #111111;
     }
 
 p {
         display: flex;
-        align-items: center;
+        align-items: center
         color: blue;
         font-size: 2.5rem;
         font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
     }
 
 #watch {
@@ -23,7 +25,7 @@ p {
         width: 600px;
         height: 600px;
         /*border: 2px solid cyan;*/
-        color: black;
+        color: gray;
         border-radius: 50%;
         font-family: monospace;
         font-family: "Black Ops One", system-ui;
