--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
         display: grid;
         place-items: center;
         overflow: hidden;
-        background-color: 5a5a5a;
+       /* background-color: 5a5a5a;*/
         background: #111111;
     }
 
