--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ p {
     }
 
 #watch {
+    background-color: black;
         display: flex;
         align-items: center;
         justify-content: center;
