border radius delete

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ p {
         height: 600px;
         /*border: 2px solid cyan;*/
         color: gray;
-        border-radius: 50%;
+        /*border-radius: 50%;*/
         font-family: monospace;
         font-family: "Black Ops One", system-ui;
         font-weight: 400;
