deleter with and height in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ p {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 600px;
+        /* width: 600px;
         height: 600px;
         /*border: 2px solid cyan;*/
         color: gray;
