--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
 p {
         display: flex;
         align-items: center
-        color: blue;
+        color: #9c9c9c;
         font-size: 2.5rem;
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
