--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@ body {
 
 p {
         display: flex;
-        align-items: center;
-        text-align:center;
+        /* align-items: center;*/
+        text-align: center;
         color: #9c9c9c;
         font-size: 2.5rem;
         font-family: Arial, Helvetica, sans-serif;
