--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 body {
     background-color: black;
-       /* margin: 30;
+        margin: 30;
         width: 100vw;
         height: 100vh;
         display: grid;
         place-items: center;
-        overflow: hidden;*/
+        overflow: hidden;
         
         /*background: #111111;*/
     }
