--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@ p {
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
     }
+h2{
+    text-align: center;
+}
 
 h3{
         text-align: center;
